increase width of identify filters panel to prevent some wrapping

--- a/app/assets/stylesheets/observations/identify/filters_button.scss
+++ b/app/assets/stylesheets/observations/identify/filters_button.scss
@@ -23,7 +23,7 @@ $changed-color: #74ac00;
   }
 
   .FiltersButtonContainer {
-    width: 901px !important;
+    width: 920px !important;
 
     > button.btn-default {
       background-color: $bg-color;
